Added inventory method
