# service/InternalCallsService.js
@@ -2,6 +2,30 @@
 
 
 /**
+ * Get Inventory
+ *
+ * type String json or xml
+ * product_id Integer Product Id
+ * returns List
+ **/
+exports.typeGet_inventoryGET = function(type,product_id) {
+  return new Promise(function(resolve, reject) {
+    var examples = {};
+    examples['application/json'] = [ {
+  "id" : 33
+}, {
+  "id" : 33
+} ];
+    if (Object.keys(examples).length > 0) {
+      resolve(examples[Object.keys(examples)[0]]);
+    } else {
+      resolve();
+    }
+  });
+}
+
+
+/**
  * Login to user account
  *
  * type String json or xml
@@ -46,8 +70,8 @@ exports.typeGet_orderGET = function(type,order_id) {
     var examples = {};
     examples['application/json'] = [ {
   "quantity" : 1,
-  "total_price" : 999.0,
-  "price" : 1.0,
+  "total_price" : 999,
+  "price" : 1,
   "name" : "Iphone",
   "id" : 1,
   "customer_id" : 1,
@@ -56,8 +80,8 @@ exports.typeGet_orderGET = function(type,order_id) {
   "status" : 0
 }, {
   "quantity" : 1,
-  "total_price" : 999.0,
-  "price" : 1.0,
+  "total_price" : 999,
+  "price" : 1,
   "name" : "Iphone",
   "id" : 1,
   "customer_id" : 1,
@@ -86,8 +110,8 @@ exports.typeGet_ordersGET = function(type) {
     examples['application/json'] = [ {
   "image" : "iphone.jpeg",
   "quantity" : 1,
-  "total_price" : 999.0,
-  "price" : 1.0,
+  "total_price" : 999,
+  "price" : 1,
   "id" : 1,
   "customer_id" : 1,
   "order_id" : 1,
@@ -96,8 +120,8 @@ exports.typeGet_ordersGET = function(type) {
 }, {
   "image" : "iphone.jpeg",
   "quantity" : 1,
-  "total_price" : 999.0,
-  "price" : 1.0,
+  "total_price" : 999,
+  "price" : 1,
   "id" : 1,
   "customer_id" : 1,
   "order_id" : 1,
@@ -124,7 +148,7 @@ exports.typeGet_productsGET = function(type) {
     var examples = {};
     examples['application/json'] = [ {
   "image" : "iphone.jpg",
-  "price" : 999.0,
+  "price" : 999,
   "created" : "2018-05-05 00:00:00",
   "name" : "iPhone",
   "description" : "This is an rare iphone",
@@ -133,7 +157,7 @@ exports.typeGet_productsGET = function(type) {
   "status" : "1 or 0"
 }, {
   "image" : "iphone.jpg",
-  "price" : 999.0,
+  "price" : 999,
   "created" : "2018-05-05 00:00:00",
   "name" : "iPhone",
   "description" : "This is an rare iphone",
@@ -161,15 +185,15 @@ exports.typePost_orderPOST = function(type,pOSTDATA) {
   return new Promise(function(resolve, reject) {
     var examples = {};
     examples['application/json'] = [ {
-  "Item Total Price" : 1998.0,
+  "Item Total Price" : 1998,
   "Order Item ID" : 643,
   "Order ID" : 298,
-  "Total Order Price" : 3996.0
+  "Total Order Price" : 3996
 }, {
-  "Item Total Price" : 1998.0,
+  "Item Total Price" : 1998,
   "Order Item ID" : 643,
   "Order ID" : 298,
-  "Total Order Price" : 3996.0
+  "Total Order Price" : 3996
 } ];
     if (Object.keys(examples).length > 0) {
       resolve(examples[Object.keys(examples)[0]]);
